update challange code

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,21 +9,35 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <style>
+      body { 
+        background-image: url("https://marshemispheres.com/images/full.jpg");
+        background-size: cover;
+      }
+
+      img:hover {
+        opacity: 0.5;
+      }
+
+      table {
+        border: 1 px snow;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center">
+      <div class="jumbotron text-center" style="background-color: #000000;">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-warning btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h2><strong>Latest Mars News</strong></h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
@@ -33,9 +47,9 @@
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h2><strong>Featured Mars Image</strong></h2>
           <img
-            src="{{mars.featured_image }}"
+            src="{{mars.featured_image}}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -44,8 +58,23 @@
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
-            {{ mars.facts | safe }}
+              <table>{{ mars.facts | safe }}</table>
           </div>
+        </div>
+      </div>
+      <!--Section for mars hemisphere images-->
+      <div class="row" id="mars-hemisphere">
+        <div class="col-md-12">
+          <h2><strong>Mars Hemispheres</strong></h2>
+            {% for hemisphere in mars.hemispheres%}
+              <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="{{hemisphere.img_url}}"/>
+                    <h3>{{hemisphere.title}}</h3>
+                    </a>
+                </div>
+              </div>
+            {% endfor %}
         </div>
       </div>
     </div>
